--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     ]
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "react-router-dom": "^5.2.0",
     "socket.io-client": "^2.3.1"
   }
