--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "react-google-login": "^5.1.22",
     "react-router-dom": "^5.2.0",
     "socket.io-client": "^2.3.1"
