--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@material-ui/icons": "^4.9.1",
     "react-google-login": "^5.1.22",
     "react-router-dom": "^5.2.0",
+    "react-scroll-to-bottom": "^4.0.0",
     "socket.io-client": "^2.3.1"
   }
 }
