--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^6.0.0-beta.0",
     "style-loader": "^0.18.2",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
@@ -39,7 +40,6 @@
     "@material-ui/core": "^4.11.1",
     "@material-ui/icons": "^4.9.1",
     "react-google-login": "^5.1.25",
-    "react-router-dom": "^5.2.0",
     "react-scroll-to-bottom": "^4.0.0",
     "socket.io-client": "^2.3.1"
   }
