--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "history": "^5.0.0",
     "react-google-login": "^5.1.23",
     "react-router-dom": "^5.2.0",
     "react-scroll-to-bottom": "^4.0.0",
