--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ awscli==1.18.153
 backcall==0.2.0
 beautifulsoup4==4.9.3
 black==20.8b1
-botocore==1.18.12
+botocore
 cachetools==4.1.1
 certifi==2020.6.20
 cffi==1.14.3
@@ -13,8 +13,9 @@ chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
 coverage==5.3
+crypto==1.4.1
 cryptography==3.1.1
-dataclasses==0.6
+dataclasses==0.7
 decorator==4.4.2
 Django==2.0.2
 dnspython==1.16.0
@@ -50,6 +51,7 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 monotonic==1.5
 mypy-extensions==0.4.3
+Naked==0.1.31
 oauthlib==3.1.0
 parso==0.1.1
 pathspec==0.8.0
@@ -65,6 +67,7 @@ ptyprocess==0.6.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
+pycrypto==2.6.1
 Pygments==2.7.1
 pylint==2.4.4
 pylint-django==2.3.0
@@ -72,7 +75,7 @@ pylint-flask==0.6
 pylint-plugin-utils==0.6
 pyOpenSSL==19.1.0
 PySocks==1.7.1
-python-dateutil==1.5
+python-dateutil
 python-dotenv==0.14.0
 python-engineio==3.13.2
 python-socketio==4.6.0
@@ -84,6 +87,7 @@ requests-oauthlib==1.3.0
 rfc.py==2020.10.1
 rsa==4.5
 s3transfer==0.3.3
+shellescape==3.8.1
 six==1.15.0
 soupsieve==2.0.1
 SQLAlchemy==1.3.20
