--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ awscli==1.18.153
 backcall==0.2.0
 beautifulsoup4==4.9.3
 black==20.8b1
-botocore
+botocore==1.18.12
 cachetools==4.1.1
 certifi==2020.6.20
 cffi==1.14.3
@@ -75,7 +75,7 @@ pylint-flask==0.6
 pylint-plugin-utils==0.6
 pyOpenSSL==19.1.0
 PySocks==1.7.1
-python-dateutil
+python-dateutil==1.5
 python-dotenv==0.14.0
 python-engineio==3.13.2
 python-socketio==4.6.0
