--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
+    "image-webpack-loader": "^7.0.1",
     "jquery": "^3.2.1",
     "react": "^16.12.0",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^6.0.0-beta.0",
     "style-loader": "^0.18.2",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
@@ -37,9 +37,11 @@
     ]
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.1",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "react-google-login": "^5.1.25",
+    "emoji-js": "^3.5.0",
+    "react-google-login": "^5.1.23",
+    "react-router-dom": "^5.2.0",
     "react-scroll-to-bottom": "^4.0.0",
     "socket.io-client": "^2.3.1"
   }
