--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.11.2",
     "image-webpack-loader": "^7.0.1",
     "jquery": "^3.2.1",
     "react": "^16.12.0",
@@ -40,6 +39,8 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "emoji-js": "^3.5.0",
+    "file-loader": "^6.2.0",
+    "react-chat-popup": "^1.1.2",
     "react-google-login": "^5.1.23",
     "react-router-dom": "^5.2.0",
     "react-scroll-to-bottom": "^4.0.0",
