--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@material-ui/icons": "^4.9.1",
     "emoji-js": "^3.5.0",
     "file-loader": "^6.2.0",
+    "js-cookie": "^2.2.1",
     "react-chat-popup": "^1.1.2",
     "react-google-login": "^5.1.23",
     "react-router-dom": "^5.2.0",
